add Bypass Execution to related list

--- a/trigger-actions-framework/main/default/layouts/sObject_Trigger_Setting__mdt-sObject Trigger Setting Layout.layout-meta.xml
+++ b/trigger-actions-framework/main/default/layouts/sObject_Trigger_Setting__mdt-sObject Trigger Setting Layout.layout-meta.xml
@@ -96,6 +96,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.Before_Insert__c</relatedList>
@@ -107,6 +108,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.After_Insert__c</relatedList>
@@ -118,6 +120,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.Before_Update__c</relatedList>
@@ -129,6 +132,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.After_Update__c</relatedList>
@@ -140,6 +144,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.Before_Delete__c</relatedList>
@@ -151,6 +156,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.After_Delete__c</relatedList>
@@ -162,6 +168,7 @@
         <fields>Apex_Class_Name__c</fields>
         <fields>Flow_Name__c</fields>
         <fields>Entry_Criteria__c</fields>
+        <fields>Bypass_Execution__c</fields>
         <fields>Description__c</fields>
         <fields>Order__c</fields>
         <relatedList>Trigger_Action__mdt.After_Undelete__c</relatedList>
